Edited version of static.Grinnell.edu; favicon not showing correctly

--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -13,8 +13,8 @@ body {
 
 body {
 	box-sizing: border-box;
-	border-top: 3px solid #444444;
-	background-color: #000000;         // #EBEBEE;
+	border-top: 3px solid #9eb382;
+	background-color: #FFFFFF;         // #EBEBEE; /* background color*/
 	padding: 20px 20px;
 	height: 100%;
 	text-align: center;
@@ -37,7 +37,7 @@ body {
 	h1 {
 		margin-top: 5%;
 		margin-bottom: 0;
-		color: #FFFFFF;        // #06385d;
+		color: #3e660a;        // #06385d; /* title color */
 		font-family: "Nunito";
 		font-size: 3.4rem;
 		letter-spacing: 2px;
@@ -45,7 +45,7 @@ body {
 	}
 
   h2 {
-    color: whitesmoke;
+    color: #3e660a;  /* box header color */
   }
 
   span.logo{
@@ -62,7 +62,7 @@ body {
 	p {
 		padding: 1rem;
 		text-align: center;
-		color: #DA291C;
+		color: #9eb382;
 	}
 
 	form {
@@ -87,7 +87,7 @@ body {
 
 			form input[type="submit"]{
 				background-color: #FFD700;
-				background-color: #8e132a;
+				background-color: #3e660a; /* sign up button color */
 				width: 20%;
 				color: white;
 				font-weight: bold;
@@ -171,7 +171,7 @@ body {
 
 div .big-button {
   display: block;
-  border: 4px solid #DA291C;
+  border: 4px solid #7c9c52; /*landing page box border color */
   padding: 10px;
   margin: 5px;
 }
